--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.5",
+    "@babel/preset-react": "^7.16.7",
     "@fxts/core": "^0.6.0",
+    "aos": "^3.0.0-beta.6",
+    "graphql": "^16.5.0",
     "next": "12.1.2",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.30.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
